# telos

./: .gitignore  .gitmodules  README.md  command.txt  pyproject.toml  recipe.md  requirements.txt
docs/: benchmark_results.md  eval_dependencies.md  eval_swe_bench.md
model_cards/: agenticml-llama3.1-8b-lora-adapter.md  agenticml-llama3.1-8b-lora-merged.md  chatml-llama3.1-8b-lora-adapter.md  chatml-llama3.1-8b-lora-merged.md  telos-llama3.1-8b-lora-merged.md
prompts/: synthetic_data_generation.txt
scripts/data_scripts/: clean_and_push_telos_data.py  migrate_talos_data_to_new_format.py  synthetic_data_gen_large.py  synthetic_data_gen_test.py  telos_to_chatml_conversion.py
scripts/evaluation_scripts/: format_validity_eval.py
scripts/training_scripts/: train_chatml_lora.py  train_lora_common.py  train_telos_lora.py
src/agenticml/: __init__.py  __main__.py  agentic_template.py  bridge.py  constants.py  frames.py  main.py  sdk.py  tokenizer_helpers.py  trajectory.py  utils.py  validators.py
src/agenticml/cli/: main.py
src/agenticml/cli/commands/: data_agenticml_to_chatml.py  data_clean_push.py  data_synthetic_gen.py  eval_aggregate_results.py  eval_benchmarks.py  eval_run_all.py  init_embeddings.py  train_on_format.py  verify_agenticml_embeddings.py  (+1 more)
src/agenticml/dataset_prep/: clean_and_push.py  synthetic_gen.py
src/agenticml/evaluation/: __init__.py
src/agenticml/model_init/: initialize_agenticml_embeddings.py  initialize_chatml_embeddings.py  verify_agenticml_embeddings.py  verify_chatml_embeddings.py
src/agenticml/prompts/: synthetic_data_generation.py
src/agenticml/runtime/: __init__.py  hf_generator.py  runtime.py  tools.py
src/agenticml/training/: __init__.py  chatml_lora.py  collator.py  hub.py  labels.py  lora_common.py  model.py  run.py  setup.py  tokenize.py  types.py
src/telos/: __main__.py  constants.py  frames.py  tokenizer.py  validators.py
src/telos/cli/: main.py
src/telos/dataset_prep/: synthetic_gen.py  telos_to_chatml.py
src/telos/evaluation/: format_validity.py
src/telos/model_init/: initialize_chatml_embeddings.py  initialize_telos_embeddings.py
src/telos/runtime/: hf_generator.py  runtime.py
src/telos/training/: telos_lora.py
tests/: conftest.py  fake_tokenizer.py  test_agentic_template.py  test_bfcl_execution_result_frame.py  test_bfcl_telos.py  test_bridge.py  test_frames.py  test_hub_tokenizer.py  test_run_all.py  test_sdk.py  test_swe_bridge.py  test_swe_smoke_pipeline.py  test_swe_suite.py  test_tokenizer.py  test_tokenizer_helpers.py  test_tokenizers.py  test_toolbench_cache.py  test_toolbench_convert.py  test_toolbench_score.py  test_toolbench_subset.py  test_toolbench_suite.py  test_trajectory.py  test_validators.py  wire_fixtures.py
tests/evaluation/benchmarks/: test_aggregate_results.py  test_run_all.py
tests/evaluation/harness/: test_adapter_mode.py  test_chatml_fc.py  test_load_model.py  test_runner.py  test_task.py
tests/fixtures/: chatml.py  generators.py  swe.py
tests/runtime/: test_hf_generator.py  test_hf_generator_generate.py  test_runtime.py
tests/training/: conftest.py  test_labels.py  test_tokenize.py
wandb/: settings
(+106 files in other folders)
