[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "telos"
version = "0.1.0"
description = "agent-native trajectory format (telos markers on llama-3.1 reserved specials), sdk, and reference runtime."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tokenizers>=0.15",
    "transformers>=4.43",
    "huggingface_hub",
]

[project.scripts]
telos = "telos.cli.main:main"

[project.optional-dependencies]
train = [
    "torch>=2.0",
    "peft",
    "datasets",
    "accelerate",
    "numpy>=1.24",
    "pyarrow",
    "wandb>=0.16",
]
eval = [
    "torch>=2.0",
    "datasets",
    "peft",
]
data = [
    "datasets",
    "pyarrow",
]
data-gen = [
    "openai",
    "python-dotenv",
]
dev = [
    "pytest>=7",
]
llm-scripts = [
    "torch>=2.0",
]
tokenizer-numpy = [
    "numpy>=1.24",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
