[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "agenticml"
version = "0.1.0"
description = "agent-native trajectory format (agenticml markers on llama-3.1 reserved specials), sdk, and reference runtime."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tokenizers>=0.15",
    "transformers>=4.43",
    "huggingface_hub",
]

[project.scripts]
agenticml = "agenticml.cli.main:main"

[project.optional-dependencies]
train = [
    "torch>=2.0",
    "peft",
    "datasets",
    "accelerate",
    "numpy>=1.24",
    "pyarrow",
    "wandb>=0.16",
]
eval = [
    "torch>=2.0",
    "datasets",
    "tqdm",
    "termcolor",  # toolbench upstream rapidapi import
]
eval-benchmarks = [
    "agenticml[eval]",
    "swebench>=2.1.0",
    "bfcl_eval @ file://third_party/gorilla/berkeley-function-call-leaderboard",
]
data = [
    "datasets",
    "pyarrow",
]
data-gen = [
    "openai",
    "python-dotenv",
]
dev = [
    "pytest>=7",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "third_party/ToolBench", "third_party/mini-swe-agent/src"]

[tool.pyright]
extraPaths = [
    "third_party/gorilla/berkeley-function-call-leaderboard",
    "third_party/ToolBench",
    "third_party/ToolBench/toolbench/tooleval",
    "third_party/mini-swe-agent/src",
]
